--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-_site/
-.sass-cache/
-.jekyll-cache/
 .jekyll-metadata
+.jekyll-cache
+.sass-cache
+Gemfile.lock
+_site/
+Gruntfile.js
+package.json
+package-lock.json
+_config.dev.yml
+node_modules
